# finite_state_machine_framework

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  two_states.c
inc/: fsm.h
src/: fsm.c  main.c
tests/: CMakeLists.txt  basic_context_test.c  basic_state_transition_test.c  current_state_tamper_test.c  empty_transitions_test.c  immediate_event_test.c  no_events_test.c  null_fsm_test.c  null_handler_test.c  null_next_state_test.c  null_transitions_test.c  outside_state_test.c  self_transition_test.c
